Fix Feature breadcrumb description overlapping with tabs
- Add resize() after async taxonomy content loads in Feature.js
- Make PerspectiveTotalCount use flex-basis:100% to force own line
- Change white-space to normal to allow text wrapping
- Remove redundant <br/> from totalCountNode innerHTML

Also includes:
- Enable Sequences and Specialty Genes tabs in Genome view
- Reorder and disable Pathways/Subsystems tabs in GenomeList
- Disable Pathways/Subsystems in _GenomeList and Taxonomy views
- Fix Taxonomy tree tab position

--- a/public/maage/css/src/styles.css
+++ b/public/maage/css/src/styles.css
@@ -1738,7 +1738,8 @@ span#dijit_form_DropDownButton_0 > span.dijitReset.dijitInline.dijitArrowButtonI
 
 .PerspectiveHeader .PerspectiveTotalCount {
   color: var(--maage-secondary-700) !important;
-  white-space: nowrap;
+  flex-basis: 100%;
+  white-space: normal;
 }
 
 div.dijitTabInner.dijitTabContent.dijitTab.dijitTabChecked.dijitChecked {
